--- a/matrix_calc/mainwindow.ui
+++ b/matrix_calc/mainwindow.ui
@@ -10,16 +10,10 @@
     <height>508</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>817</width>
-    <height>508</height>
-   </size>
-  </property>
   <property name="maximumSize">
    <size>
-    <width>817</width>
-    <height>508</height>
+    <width>3000</width>
+    <height>1500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -30,25 +24,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
+      <y>100</y>
       <width>221</width>
-      <height>211</height>
+      <height>221</height>
      </rect>
-    </property>
-    <property name="rowCount">
-     <number>1</number>
-    </property>
-    <property name="columnCount">
-     <number>1</number>
     </property>
     <attribute name="horizontalHeaderVisible">
      <bool>false</bool>
-    </attribute>
-    <attribute name="horizontalHeaderCascadingSectionResizes">
-     <bool>false</bool>
-    </attribute>
-    <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>50</number>
     </attribute>
     <attribute name="horizontalHeaderHighlightSections">
      <bool>true</bool>
@@ -56,78 +38,47 @@
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
-    <attribute name="verticalHeaderDefaultSectionSize">
-     <number>25</number>
-    </attribute>
     <attribute name="verticalHeaderHighlightSections">
      <bool>true</bool>
     </attribute>
-    <row/>
-    <column/>
    </widget>
    <widget class="QTableWidget" name="MatrixB_tableWidget">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>90</y>
+      <y>100</y>
       <width>221</width>
-      <height>211</height>
+      <height>221</height>
      </rect>
-    </property>
-    <property name="rowCount">
-     <number>1</number>
-    </property>
-    <property name="columnCount">
-     <number>1</number>
     </property>
     <attribute name="horizontalHeaderVisible">
      <bool>false</bool>
     </attribute>
-    <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>50</number>
-    </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
-    <attribute name="verticalHeaderDefaultSectionSize">
-     <number>25</number>
-    </attribute>
-    <row/>
-    <column/>
    </widget>
    <widget class="QTableWidget" name="result_tableWidget">
     <property name="geometry">
      <rect>
       <x>570</x>
-      <y>90</y>
+      <y>100</y>
       <width>221</width>
-      <height>211</height>
+      <height>221</height>
      </rect>
-    </property>
-    <property name="rowCount">
-     <number>0</number>
-    </property>
-    <property name="columnCount">
-     <number>0</number>
     </property>
     <attribute name="horizontalHeaderVisible">
      <bool>false</bool>
     </attribute>
-    <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>50</number>
-    </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
-    </attribute>
-    <attribute name="verticalHeaderDefaultSectionSize">
-     <number>25</number>
     </attribute>
    </widget>
    <widget class="QPushButton" name="Button_sum">
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>130</y>
+      <y>160</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -147,7 +98,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>170</y>
+      <y>200</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -167,7 +118,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>210</y>
+      <y>240</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -187,7 +138,7 @@
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>180</y>
+      <y>210</y>
       <width>21</width>
       <height>16</height>
      </rect>
@@ -207,74 +158,47 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>50</y>
+      <y>60</y>
       <width>41</width>
       <height>31</height>
      </rect>
-    </property>
-    <property name="minimum">
-     <number>0</number>
-    </property>
-    <property name="value">
-     <number>0</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="columsA_spinBox">
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>50</y>
+      <y>60</y>
       <width>41</width>
       <height>31</height>
      </rect>
-    </property>
-    <property name="minimum">
-     <number>0</number>
-    </property>
-    <property name="value">
-     <number>0</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="columsB_spinBox">
     <property name="geometry">
      <rect>
       <x>480</x>
-      <y>50</y>
+      <y>60</y>
       <width>41</width>
       <height>31</height>
      </rect>
-    </property>
-    <property name="minimum">
-     <number>0</number>
-    </property>
-    <property name="singleStep">
-     <number>1</number>
-    </property>
-    <property name="value">
-     <number>0</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="rowsB_spinBox">
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>50</y>
+      <y>60</y>
       <width>41</width>
       <height>31</height>
      </rect>
-    </property>
-    <property name="minimum">
-     <number>0</number>
-    </property>
-    <property name="value">
-     <number>0</number>
     </property>
    </widget>
    <widget class="QLabel" name="label_rowsA">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>70</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -292,7 +216,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>60</y>
+      <y>70</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -310,7 +234,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>60</y>
+      <y>70</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -328,7 +252,7 @@
     <property name="geometry">
      <rect>
       <x>400</x>
-      <y>60</y>
+      <y>70</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -345,7 +269,7 @@
    <widget class="QLabel" name="label_A">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>30</y>
       <width>47</width>
       <height>31</height>
@@ -365,7 +289,7 @@
    <widget class="QLabel" name="label_B">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>310</x>
       <y>30</y>
       <width>47</width>
       <height>31</height>
@@ -385,8 +309,8 @@
    <widget class="QLabel" name="label_resultMatrix">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>30</y>
+      <x>570</x>
+      <y>40</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -406,7 +330,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>310</y>
+      <y>340</y>
       <width>61</width>
       <height>23</height>
      </rect>
@@ -419,14 +343,14 @@
      </font>
     </property>
     <property name="text">
-     <string>|D|:</string>
+     <string>|A|:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="Button_inverseA">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>370</y>
+      <y>400</y>
       <width>221</width>
       <height>23</height>
      </rect>
@@ -446,7 +370,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>400</y>
+      <y>430</y>
       <width>221</width>
       <height>23</height>
      </rect>
@@ -466,7 +390,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>310</y>
+      <y>340</y>
       <width>61</width>
       <height>23</height>
      </rect>
@@ -479,14 +403,14 @@
      </font>
     </property>
     <property name="text">
-     <string>|D|:</string>
+     <string>|B:|</string>
     </property>
    </widget>
    <widget class="QPushButton" name="Button_inverseB">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>370</y>
+      <y>400</y>
       <width>221</width>
       <height>23</height>
      </rect>
@@ -506,7 +430,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>400</y>
+      <y>430</y>
       <width>221</width>
       <height>23</height>
      </rect>
@@ -522,11 +446,37 @@
      <string>Транспонирование</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="Button_sgenA">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>30</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сгенерировать</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Button_sgenB">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>30</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сгенерировать</string>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_detA">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>310</y>
+      <y>340</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -544,7 +494,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>310</y>
+      <y>340</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -562,7 +512,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>370</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -582,7 +532,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>340</y>
+      <y>370</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -598,13 +548,33 @@
      <string>Умножить на:</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="mulA_on">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>370</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="mulB_on">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>370</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QPushButton" name="Button_ToA">
     <property name="geometry">
      <rect>
       <x>570</x>
-      <y>400</y>
+      <y>340</y>
       <width>221</width>
-      <height>21</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -622,9 +592,9 @@
     <property name="geometry">
      <rect>
       <x>570</x>
-      <y>430</y>
+      <y>400</y>
       <width>221</width>
-      <height>21</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -636,158 +606,6 @@
     </property>
     <property name="text">
      <string>Копировать в В</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="Button_randomA">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>430</y>
-      <width>221</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Сгенерировать random</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="Button_randomB">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>430</y>
-      <width>221</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Сгенерировать random</string>
-    </property>
-   </widget>
-   <widget class="QDoubleSpinBox" name="doubleSpinBox_A">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>340</y>
-      <width>101</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <double>0.000000000000000</double>
-    </property>
-    <property name="singleStep">
-     <double>0.010000000000000</double>
-    </property>
-    <property name="value">
-     <double>0.000000000000000</double>
-    </property>
-   </widget>
-   <widget class="QDoubleSpinBox" name="doubleSpinBox_B">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>340</y>
-      <width>101</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <double>0.000000000000000</double>
-    </property>
-    <property name="singleStep">
-     <double>0.010000000000000</double>
-    </property>
-    <property name="value">
-     <double>0.000000000000000</double>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_comma">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>10</y>
-      <width>61</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>0</number>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>16</x>
-      <y>10</y>
-      <width>511</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Изначально установите сколько знаков после запятой желаете увидеть:</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="Button_ofstream">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>312</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Записать в файл</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="Button_ifstream">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>360</y>
-      <width>221</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Считать из файла</string>
     </property>
    </widget>
   </widget>
